<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.work.chaostools.ShortNotes.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <android.support.v7.widget.Toolbar

            android:id="@+id/toolbarAbout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            app:title="About"

            />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                app:cardBackgroundColor="#fcfcfc"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ico2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="An open source Project from : @chaostools"
                        android:textSize="12dp"
                        android:textStyle="bold" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/blue_material" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/git"/>

                        <TextView
                            android:text="@string/github"

                            android:layout_weight="1"
                            android:layout_width="0dp"

                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:textSize="12dp"
                            android:autoLink="web"
                            android:linksClickable="true"                            android:textStyle="bold" />
                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/blue_material" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/linkedin"/>
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:autoLink="web"
                            android:linksClickable="true"
                            android:text="@string/linkedin"
                            android:textSize="12dp"
                            android:textStyle="bold" />


                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                app:cardBackgroundColor="#f9ffffff"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="LICENSES"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                app:cardBackgroundColor="#f9ffffff"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="Android Architecture Components"
                        android:textColor="@color/blue_material"
                        android:layout_marginBottom="5dp"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/blue_material" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:padding="5dp"
                        android:text="@string/license_lLifecycle_components"
                        android:textSize="12dp"
                        android:textStyle="bold" />


                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                app:cardBackgroundColor="#f9ffffff"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="App Icon"
                        android:textColor="@color/blue_material"
                        android:layout_marginBottom="5dp"
                        android:textSize="16dp"
                        android:textStyle="bold" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/blue_material" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:padding="5dp"
                        android:text="@string/app_icon_license"
                        android:textSize="12dp"
                        android:textStyle="bold" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                app:cardBackgroundColor="#f9ffffff"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="Note"
                        android:textColor="@color/blue_material"
                        android:layout_marginBottom="5dp"
                        android:textSize="16dp"
                        android:textStyle="bold" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/blue_material" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:padding="5dp"
                        android:text="@string/note_icon_license"
                        android:textSize="12dp"
                        android:textStyle="bold" />


                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
